--- a/frontend/src/style/SignupHeader.css
+++ b/frontend/src/style/SignupHeader.css
@@ -16,8 +16,9 @@
 .children {
   display: flex;
   float: right;
-  width: 80%;
+  width: 60%;
   height: 100%;
   justify-content: space-evenly;
   align-items: center;
+  margin-right: 200px;
 }
