--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -25,6 +25,14 @@ body {
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none !important;
   color: white;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: large !important;
 }
