--- a/frontend/src/style/Order.css
+++ b/frontend/src/style/Order.css
@@ -6,6 +6,7 @@
   height: 100%;
   overflow: scroll;
   position: relative;
+  align-items: center;
 }
 
 .order__user {
@@ -14,4 +15,9 @@
   justify-content: center;
   align-items: center;
   right: 250px;
+}
+
+.order__alert {
+  width: 60%;
+  margin-top: 20px;
 }
