--- a/frontend/src/style/OrderContent.css
+++ b/frontend/src/style/OrderContent.css
@@ -131,12 +131,12 @@
   width: 85%;
 }
 
-.tracker__form {
-  width: 100%;
+.coordinates {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: left;
 }
 
 .tracker__input {
