fix : links hover and font-weight

--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -29,10 +29,19 @@ a {
   color: white;
 }
 
+a:hover {
+  text-decoration: none !important;
+  color: white;
+}
+
 h2,
 h3,
 h4,
 h5,
 h6 {
   font-size: large !important;
+}
+
+h1 {
+  font-weight: 700;
 }
