--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -1,3 +1,5 @@
+@import "./bootstrap-toggle-css/bootstrap-toggle.min.css";
+@import "./bootstrap-toggle-css/bootstrap2-toggle.min.css";
 * {
   margin: 0;
   padding: 0;
