--- a/frontend/src/style/ProfileContent.css
+++ b/frontend/src/style/ProfileContent.css
@@ -142,7 +142,7 @@ input[type="text"] {
 
 .profile__adresse {
   width: 100%;
-  height: 100%;
+  height: 80%;
   background-color: white;
   border-radius: 5px;
   display: none;
@@ -175,7 +175,7 @@ input[type="text"] {
 .profile__requests {
   display: none;
   width: 100%;
-  height: 100%;
+  height: 80%;
   background-color: white;
   border-radius: 5px;
 }
@@ -215,4 +215,7 @@ input[type="text"] {
   padding-top: 2.5px;
   padding-bottom: 2.5px;
   border-radius: 2px;
+}
+
+.profile__adresse {
 }
