--- a/frontend/src/style/ProfileContent.css
+++ b/frontend/src/style/ProfileContent.css
@@ -183,6 +183,7 @@ input[type="text"] {
 .profile__requests--content {
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
 }
 
 .content__container--header {
@@ -215,4 +216,13 @@ input[type="text"] {
   padding-top: 2.5px;
   padding-bottom: 2.5px;
   border-radius: 2px;
+}
+
+.header__data {
+  width: fit-content;
+}
+
+.dropdown {
+  float: right;
+  margin-top: -30px;
 }
