--- a/frontend/src/style/Content.css
+++ b/frontend/src/style/Content.css
@@ -35,3 +35,25 @@
   margin-top: 20px;
   font-weight: 600;
 }
+
+@media only screen and (max-width: 818px) {
+  .content__brick {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: flex-start;
+  }
+
+  .content__brick > img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .content__brick--paragraph {
+    width: 100%;
+  }
+
+  .content__brick--paragraph > p {
+    width: 100%;
+  }
+}
