--- a/frontend/src/style/Header.css
+++ b/frontend/src/style/Header.css
@@ -36,3 +36,17 @@
   justify-content: center;
   align-items: center;
 }
+
+@media only screen and (max-width: 750px) {
+  #login {
+    display: none;
+  }
+  .header__logo {
+    justify-content: left;
+    align-items: flex-start;
+    margin-top: 30px;
+    margin-left: 30px;
+    width: 60%;
+    height: 100%;
+  }
+}
