--- a/frontend/src/style/HeaderContent.css
+++ b/frontend/src/style/HeaderContent.css
@@ -94,3 +94,57 @@ strong {
   justify-content: space-between;
   padding-right: 40px;
 }
+
+#menu {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+#menu > a {
+  display: flex;
+  margin-top: 100px;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  font-size: 1.5em;
+}
+
+.menuButton {
+  position: absolute;
+  top: 40px;
+  right: 10%;
+  z-index: 2;
+}
+
+@media only screen and (min-width: 750px) {
+  .menuButton {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 910px) {
+  .HeaderContent__headline {
+    margin-top: 10em;
+    font-size: 0.7em;
+  }
+  .HeaderContent__signup {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .HeaderContent__signup--driver {
+    margin-right: 0px;
+  }
+
+  .HeaderContent__signup--group {
+    margin-top: 10px;
+  }
+}
