--- a/frontend/src/style/Profile.css
+++ b/frontend/src/style/Profile.css
@@ -9,3 +9,34 @@
 #hidden__map {
   display: none;
 }
+
+.profile__menu {
+  display: none;
+}
+
+.profile__menuButton {
+  position: absolute;
+  color: black;
+  top: 50px;
+  right: 30px;
+  z-index: 100;
+}
+
+.profile__menuButton:hover {
+  color: black;
+}
+
+@media only screen and (min-width: 1000px) {
+  .profile__menuButton {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .profile__container {
+    display: block;
+    height: unset;
+    min-height: 100%;
+    text-align: justify;
+  }
+}
