--- a/frontend/src/style/SignupCustomer.css
+++ b/frontend/src/style/SignupCustomer.css
@@ -3,10 +3,16 @@
   height: 100%;
   background-color: #f2f2f2;
 }
+
+.signup__container--content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60%;
+}
 .signup {
   display: flex;
-  margin-top: 100px;
-  margin-left: 30%;
   background-color: white;
   width: 500px;
   height: 200px;
