--- a/frontend/src/style/SignupHeader.css
+++ b/frontend/src/style/SignupHeader.css
@@ -22,3 +22,9 @@
   align-items: center;
   margin-right: 200px;
 }
+
+@media only screen and (max-width: 1000px) {
+  .children {
+    display: none;
+  }
+}
