--- a/frontend/src/style/Logout.css
+++ b/frontend/src/style/Logout.css
@@ -14,3 +14,9 @@
   font-weight: bold;
   padding: 5px;
 }
+
+@media only screen and (max-width: 1000px) {
+  .header__logout {
+    display: none;
+  }
+}
