--- a/frontend/src/style/Profile.css
+++ b/frontend/src/style/Profile.css
@@ -9,3 +9,47 @@
 #hidden__map {
   display: none;
 }
+
+.profile__menu {
+  display: none;
+}
+
+.profile__menuButton {
+  position: absolute;
+  color: black;
+  top: 50px;
+  right: 30px;
+  z-index: 100;
+}
+
+.profile__menuButton:hover {
+  color: black;
+}
+
+.logout__menu__item {
+  display: flex;
+}
+
+@media only screen and (min-width: 1000px) {
+  .profile__menuButton {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .profile__container {
+    display: block;
+    height: unset;
+    min-height: 100%;
+    text-align: justify;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .logout {
+    position: unset;
+  }
+  .logout h4 input {
+    background-color: unset;
+  }
+}
