--- a/frontend/src/style/Track.css
+++ b/frontend/src/style/Track.css
@@ -14,3 +14,10 @@
   justify-content: center;
   align-items: center;
 }
+
+@media only screen and (max-width: 1000px) {
+  .track__map {
+    width: 100%;
+    height: 100%;
+  }
+}
