--- a/frontend/src/style/OrderContent.css
+++ b/frontend/src/style/OrderContent.css
@@ -160,9 +160,22 @@
   margin-bottom: 10px;
 }
 
+.map__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 600px;
+}
+
+.map__container > #map {
+  width: 80%;
+  height: 80%;
+}
+
 @media only screen and (max-width: 1400px) {
   .order__content__main {
-    width: 80%;
+    width: 90%;
   }
 }
 
