fix : making orders table more mobile friendly

--- a/frontend/src/style/ProfileContent.css
+++ b/frontend/src/style/ProfileContent.css
@@ -252,6 +252,10 @@ input[type="text"] {
   align-items: center;
 }
 
+.responsiveTable tbody tr {
+  border: none !important;
+}
+
 @keyframes toggle {
   0% {
     right: -90%;
